fixed overflow at home and added portfolio route to home

--- a/src/routes/home/Home.module.css
+++ b/src/routes/home/Home.module.css
@@ -10,7 +10,8 @@ h3 {
 
 .home {
 	width: 100%;
-	height: 100vh;
+	height: 100vh !important;
+	overflow: hidden;
 	display: flex;
 	align-items: center;
 	background-color: #fff;
@@ -19,7 +20,7 @@ h3 {
 
 .container {
 	position: relative;
-	width: 50vw;
+	width: 100vw;
 	height: 50vh;
 	display: flex;
 	flex-direction: row;
@@ -30,11 +31,14 @@ h3 {
 
 @media (max-width: 1250px) {
 	.home {
-		padding: 0.5em;
+		padding: 0.5em 0.5em 0 0.5em;
+		height: 100vh !important;
+		max-height: 100vh;
 	}
 	.container {
+		height: 100vh !important;
+		max-height: 100vh;
 		width: 90vw;
-		height: 90vh;
 		display: flex;
 	}
 	.homeText {
@@ -45,7 +49,8 @@ h3 {
 .contentHome {
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 100vh !important;
+	max-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -168,9 +173,9 @@ h3 {
 
 .heroImage {
 	position: absolute;
-	top: 25%;
-	right: 15vw;
-	width: 25vw;
+	top: 25vh;
+	right: -30vw;
+	width: 50vw;
 	aspect-ratio: 1;
 	animation: rotate 15s infinite alternate;
 	z-index: 0;
@@ -182,9 +187,6 @@ h3 {
 		top: -30vw;
 		width: 80vw;
 		right: -40vw;
-	}
-	.home {
-		max-height: 100vh;
 	}
 }
 
